--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="bg-gray-100 font-sans">
     <!-- Hero Section -->
     <section class="hero bg-gradient-to-r from-gray-400 to-blue-600 py-16 text-center px-4 sm:px-8">
-        <h1 class="text-4xl md:text-5xl font-bold text-white mb-4">Secretary</h1>
+        <h1 class="text-4xl md:text-5xl font-bold text-white mb-4">Secretary RT 02/RW 14</h1>
         <p class="text-lg sm:text-xl text-white mb-8">Sistem Pengajuan Surat Online RT</p>
         <a href="https://www.canva.com/design/DAGYMq0Cq14/IClE2BPDu9XvEgbkTMLY7Q/view?utm_content=DAGYMq0Cq14&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=hd2e019e3dc" target="_blank" class="text-white border px-4 py-2 rounded-full hover:bg-white hover:text-gray-400 transition duration-200">Pelajari Lebih Lanjut <i class="fas fa-arrow-right ml-2"></i></a>
     </section>
